<resources>
    <string name="app_name">Notepad</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_note_title">Title</string>
    <string name="edit_note_description">Description</string>
    <string name="update_note_btn">Update note</string>
    <string name="edit_text_due_date">Due Date</string>
    <string name="due_date_btn">Due Date</string>
    <string name="importance_txt">Importance:</string>
    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>
    <string name="note_menu">Note Menu</string>
    <string name="add_new">Add new</string>
    <string name="dialog_title_hint">Title</string>
    <string name="dialog_description_hint">Description</string>
    <string name="top_bar_menu_create">Create</string>
    <string name="dialog_calendar_hint">Choose the date</string>
    <string name="exit_dialog_message">Are you sure you want to close the app?</string>
    <string name="exit_dialog_title">Leaving?</string>
    <string name="button_text_yes">Yes</string>
    <string name="button_text_no">No</string>
    <string name="nav_item_about">About</string>
    <string name="nav_item_exit">Exit</string>
    <string name="nav_item_share">Share</string>
    <string name="nav_item_send">Send</string>
    <string name="drawer_header">Notepad</string>
    <string name="nav_section_communicate">Communicate</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="about_title">Notepad</string>
    <string name="about_subtitle">version 0.1</string>

    <string-array name="importance">
        <item>Not Important</item>
        <item>Important</item>
        <item>Critical</item>
    </string-array>
</resources>