<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_drawer_about"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/nav_item_about" />
        <item
            android:id="@+id/action_drawer_exit"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/nav_item_exit" />
    </group>

    <item android:title="@string/nav_section_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/nav_item_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_baseline_send_24"
                android:title="@string/nav_item_send" />
        </menu>
    </item>
</menu>