<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/yellow_light">

    <EditText
        android:id="@+id/edit_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:hint="@string/edit_note_title"
        android:textStyle="bold"
        android:layout_marginHorizontal="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/date_picker_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:textSize="20sp"
            android:text="@string/due_date_btn" />

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_text_due_date"
            android:textSize="20sp"
            android:layout_marginEnd="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/importance_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/importance_txt"
            android:textSize="20sp"
            android:layout_marginHorizontal="8dp" />

        <Spinner
            android:id="@+id/importance_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_note_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="1"
        android:gravity="top|left"
        android:hint="@string/edit_note_description"
        android:textSize="20sp" />

    <Button
        android:id="@+id/edit_note_update_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_note_btn" />

</LinearLayout>